Implemented Font-Awesome icons and removed multiple images

--- a/js/bpi/music/templates/PlayingControl.html
+++ b/js/bpi/music/templates/PlayingControl.html
@@ -5,21 +5,17 @@
 	    <table data-dojo-attach-point="_controlHolder">
 	    	<tr>
 	    		<td data-dojo-attach-point="_controlHolderButtons">
-				    <button data-dojo-attach-point="_btnPrev" data-dojo-type="dijit/form/Button" type="button"
-				    		data-dojo-props="iconClass:'iconPrev', showLabel:false">Prev</button>
+				    <button data-dojo-attach-point="_btnPrev" data-dojo-type="dijit/form/Button" type="button">Prev</button>
 
-				    <button data-dojo-attach-point="_btnPlayPause" data-dojo-type="dijit/form/Button" type="button"
-				    data-dojo-props="iconClass:'iconPlay', showLabel:false">Play</button>
+				    <button data-dojo-attach-point="_btnPlayPause" data-dojo-type="dijit/form/Button" type="button">Play</button>
 					
-					<button data-dojo-attach-point="_btnNext" data-dojo-type="dijit/form/Button" type="button"
-					data-dojo-props="iconClass:'iconNext', showLabel:false">Next</button>
+					<button data-dojo-attach-point="_btnNext" data-dojo-type="dijit/form/Button" type="button">Next</button>
 				</td>
 				<td data-dojo-attach-point="_controlHolderVolume">
 					<div data-dojo-attach-point="_volumeSeekBar"></div>
 				</td>
 				<td data-dojo-attach-point="_controlHolderShuffle">
-  					<button data-dojo-attach-point="_btnShuffle" data-dojo-type="dijit/form/Button" type="button"
-  					data-dojo-props="iconClass:'iconShuffle', showLabel:false">Shuffle</button>
+  					<button data-dojo-attach-point="_btnShuffle" data-dojo-type="dijit/form/Button" type="button">Shuffle</button>
 				</td>
 			</tr>
 		</table>
