Fixed widths of buttons for font-awesome icons

--- a/js/bpi/music/templates/PlayingControl.html
+++ b/js/bpi/music/templates/PlayingControl.html
@@ -7,7 +7,7 @@
 	    		<td data-dojo-attach-point="_controlHolderButtons">
 				    <button data-dojo-attach-point="_btnPrev" data-dojo-type="dijit/form/Button" type="button">Prev</button>
 
-				    <button data-dojo-attach-point="_btnPlayPause" data-dojo-type="dijit/form/Button" type="button">Play</button>
+				    <button data-dojo-attach-point="_btnPlayPause" data-dojo-type="dijit/form/Button" type="button"><i class="icon-play"></i></button>
 					
 					<button data-dojo-attach-point="_btnNext" data-dojo-type="dijit/form/Button" type="button">Next</button>
 				</td>
