--- a/css/clear/bpiMain.css
+++ b/css/clear/bpiMain.css
@@ -1,15 +1,10 @@
 /* BeakPi - CSS */
 
 /*
-Color Scheme:
-http://colorschemedesigner.com/#5A31KsOsOFfFf
 
-Primary Color:
-E01625  963B42  78040D  F4616C  F49BA2
-Secondary Color A:
-0F9A69  296751  035337  58DDAE  8CDDC0
-Secondary Color B:
-85D315  6B8D38  457104  B5F05F  CCF098
+Color Scheme:
+http://colorschemedesigner.com/#3E11E5Z--00--
+
 
 */
 
@@ -18,18 +13,18 @@ Secondary Color B:
 /* -------- */
 
 body {
-  background: #000;
+  background: #FBFCFF;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
-  color: #E01625;
+  color: #000;
 }
 
 #serviceViewHolder {
-  background: #000
+  background: #FBFCFF
 }
 
 #serviceMenuView {
-  background: #000;
+  background: #E9F2FF;
 }
 
 #serviceView {
@@ -37,7 +32,7 @@ body {
 
 
 .slideInHolder {
-  background: #000;
+  background: #FBFCFF;
 
 }
 /* --------------- */
@@ -49,10 +44,11 @@ body {
 /* --------------- */
 
 .claro .dijitButton .dijitButtonNode, .claro .dijitDropDownButton .dijitButtonNode, .claro .dijitComboButton .dijitButtonNode, .claro .dijitToggleButton .dijitButtonNode {
-  background-color: #E01625;
+  background-color: #EAF3FF;
   background-image: none;
-  border: none;
-  color: #FFF;
+  border: solid 1px #003B8D;
+  color: #000;
+  border-radius: 10px;
 }
 
 .dijitButtonText {
@@ -67,7 +63,7 @@ body {
 
 .claro .dijitSlider .dijitSliderProgressBarH, .claro .dijitSlider .dijitSliderLeftBumper,
 .claro .dijitSliderDisabled .dijitSliderProgressBarH, .claro .dijitSliderDisabled .dijitSliderLeftBumper{
-  background: #0F9A69
+  background: #3F5A82
 }
 /* --------------- */
 /* --------------- */
@@ -108,22 +104,20 @@ body {
 }
 
 .currentlyPlaying{
-  color: #58DDAE;
-  background: #000;
-  border: solid 2px #0F9A69;
-
+  border: solid 1px #003B8D;
+  color: #000;
+  background: #FBFCFF;
 }
 
 .currentlyPlayingInfo {
-  
 }
 
 .noSongs{
 }
 
 .PlayingControlHolder {
-  background: #000;
-  color: #E01625;
+  background: #FBFCFF;
+  color: #52646A;
 }
 
 .PlayingControl {
